// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormLabel adds punctuation to requirementLabel when hint is also present 1`] = `
<label
  class="ds-c-label"
>
  <span
    class=""
  >
    Hello world
  </span>
  <span
    class="ds-c-field__hint"
  >
    Optional.
     
    Hint
  </span>
</label>
`;

exports[`FormLabel is inversed 1`] = `
<span
  class="ds-c-field__hint ds-c-field__hint--inverse"
>
  Foo
</span>
`;

exports[`FormLabel renders as a legend element 1`] = `
<legend
  class="ds-c-label"
>
  <span
    class=""
  >
    Hello world
  </span>
</legend>
`;

exports[`FormLabel renders label text 1`] = `
<span
  class=""
>
  Hello world
</span>
`;

exports[`FormLabel renders requirementLabel 1`] = `
<label
  class="ds-c-label"
>
  <span
    class=""
  >
    Hello world
  </span>
  <span
    class="ds-c-field__hint"
  >
    <em>
      It is really optional
    </em>
  </span>
</label>
`;

exports[`FormLabel supports additional attributes 1`] = `
<label
  aria-label="testing aria"
  class="ds-c-label ds-u-foo"
>
  <span
    class=""
  >
    Hello world
  </span>
</label>
`;
